--- a/css/youth.css
+++ b/css/youth.css
@@ -46,6 +46,30 @@ nav{
   border-radius: 2px;
   transition: all 0.3s ease;
 }
+
+.nav-active{
+  transform: translateX(0%);
+}
+@keyframes navLinkFade {
+  from{
+    opacity: 0;
+    transform: translate(50px);
+  }
+  to{
+    opacity: 1;
+    transform: translate(0px);
+  }
+}
+.toggle .line1{
+  transform: rotate(-45deg) translate(-10px,8px);
+}
+.toggle .line2{
+  opacity: 0;
+}
+.toggle .line3{
+  transform: rotate(45deg) translate(-10px,-8px);
+}
+
 /*End of nav
 
 Start of first section*/
@@ -240,8 +264,437 @@ vertical-align: middle;
 .dot3{
   background-color: rgb(245, 177, 27);
 }
+
+
+.third-background{
+  position: absolute;
+  width: 100%;
+}
+.third-holder{
+  position: relative;
+  top: 0;
+  padding: 10vh;
+  text-align: center;
+}
+.top-news{
+  margin: auto;
+  max-width: 1300px;
+  justify-content: center;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-auto-rows: 200px;
+  gap: 1rem;
+  /*--stagger-delay: 100ms;
+}
+
+@keyframes cardEntrance {
+from{
+  opacity: 0;
+  transform: scale(0.8);
+
+}
+to{
+    opacity: 1;
+    transform: scale(1);
+}
+}
+.small-card:nth-child(1){
+  animation-delay: calc(2 * var(--stagger-delay));
+}
+.small-card:nth-child(2){
+  animation-delay: calc(1.5 * var(--stagger-delay));
+}*/
+}
+.small-card{
+  max-width: 400px;
+  margin: auto;
+  width: 380px;
+  height: 200px;
+  animation: cardEntrance 700ms ease-out;
+  border-radius: 10px;
+  overflow: hidden;
+  -webkit-box-shadow: 13px 21px 68px -14px rgba(0,0,0,0.6);
+  -moz-box-shadow: 13px 21px 68px -14px rgba(0,0,0,0.6);
+  box-shadow: 13px 21px 68px -14px rgba(0,0,0,0.6);
+  overflow: hidden;
+  position: relative;
+}
+.big-card{
+  margin: auto;
+  width: 800px;
+  grid-row: 1 / 3;
+  grid-column: 1 / 3;
+  height: 415px;
+  border-radius: 10px;
+  -webkit-box-shadow: 13px 21px 68px -14px rgba(0,0,0,0.6);
+  -moz-box-shadow: 13px 21px 68px -14px rgba(0,0,0,0.6);
+  box-shadow: 13px 21px 68px -14px rgba(0,0,0,0.6);
+  overflow: hidden;
+  position: relative;
+  /*
+  animation: cardEntrance 700ms ease-out;
+  animation-delay: calc(1 * var(--stagger-delay));
+  */
+}
+.card-image{
+top: 50%;
+position: relative;
+transform: translateY(-50%);
+width: 100%;
+z-index: 4;
+}
+.card-overlay{
+  -webkit-box-shadow: inset 1px -200px 152px -155px rgba(0,0,0,1);
+  -moz-box-shadow: inset 1px -200px 152px -155px rgba(0,0,0,1);
+  box-shadow: inset 1px -200px 152px -155px rgba(0,0,0,1);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 5;
+  display: block;
+  transition: all 500ms ease;
+}
+.card-overlay:before{
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+
+}
+.card-overlay:hover{
+  background: rgba(0,0,0,0.6);
+}
+.medium-title{
+  font-size: 50px;
+  margin: 300px 20px 0 20px;
+  text-shadow: 1px 1px 0px rgba(0,0,0,0.51);
+  font-weight: bold;
+  color: #e3e9e6;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.small-title{
+  font-size: 25px;
+  margin: 150px 10px 0 10px;
+  text-shadow: 1px 1px 0px rgba(0,0,0,0.51);
+  font-weight: bold;
+  color: #e3e9e6;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+/*End of Top Stories
+start of New stories*/
+
+.new-stories{
+  margin: auto;
+  max-width: 1300px;
+  justify-content: center;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-auto-rows: 120px;
+  gap: 1rem;
+  position: relative;
+}
+.tiny-card{
+  max-width: 400px;
+  margin: auto;
+  width: 380px;
+  height: 100px;
+  animation: cardEntrance 700ms ease-out;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  transition: all 100ms ease-in-out;
+  -webkit-box-shadow: 13px 21px 68px -14px rgba(0,0,0,0.6);
+  -moz-box-shadow: 13px 21px 68px -14px rgba(0,0,0,0.6);
+  box-shadow: 13px 21px 68px -14px rgba(0,0,0,0.6);
+}
+.tiny-title{
+  font-size: 25px;
+  margin: 10px;
+  text-shadow: 1px 1px 0px rgba(0,0,0,0.51);
+  font-weight: bold;
+  color: #e3e9e6;
+  display: block;
+}
+.tiny-overlay{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 5;
+  display: block;
+  background: rgba(0,0,0,0.6);
+}
+.tiny-card:hover{
+  transform: scale(0.95);
+  box-shadow: none;
+}
+
+/*end new stories
+start share...*/
+.share{
+  background-color: rgb(14,44,68);
+  max-width: 1250px;
+  margin: 100px auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 1rem;
+  grid-auto-rows: 200px;
+  border-radius: 10px;
+}
+.descriptor{
+  grid-column: 1 / 3;
+  margin: auto;
+}
+.small-descriptor{
+  font-size: 35px;
+  text-shadow: 1px 1px 0px rgba(0,0,0,0.51);
+  color: #dedede;
+  display: block;
+  margin: auto;
+}
+.tiny-descriptor{
+  font-size: 15px;
+  color: #dedede;
+  display: block;
+  margin: auto;
+}
+.share-btn{
+  margin: auto;
+  width: 100%;
+}
+* {
+margin: 0;
+padding: 0;
+}
+/*end description share
+start share btn...*/
+.social-media{
+    opacity: 0;
+    height: 30px;
+    color: #1F1E1E;
+    will-change: transform;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+        transform: scale(0.1);
+    border-radius: 50%;
+}
+.social-media img{
+  height: 100%;
+}
+.social-media:hover{
+  background: rgb(245,177,27);
+}
+.btn_wrap {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    overflow: hidden;
+    cursor: pointer;
+    width: 240px;
+    height: 50px;
+    background-color: #EEEEED;
+    border-radius: 80px;
+    padding: 0 18px;
+    will-change: transform;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+.btn_wrap:hover {
+    /* transition-delay: .4s; */
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1)
+}
+.btn-descriptor {
+    position: absolute;
+    z-index: 5;
+    width: 240px;
+    height: 72px;
+    border-radius: 80px;
+    font-size: 20px;
+    text-align: center;
+    line-height: 70px;
+    letter-spacing: 2px;
+    color: rgb(30,28,50);
+    background-color: rgb(245,177,27);
+    padding: 0 18px;
+    -webkit-transition: all 1.2s ease;
+    transition: all 1.2s ease;
+}
+.container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 240px;
+    height: 64px;
+    border-radius: 80px;
+}
+.container img:nth-of-type(1) {
+            -webkit-transition-delay: 1.1s;
+                    transition-delay: 1.1s;
+}
+
+.container img:nth-of-type(2) {
+            -webkit-transition-delay: .9s;
+                    transition-delay: .9s;
+}
+
+.container img:nth-of-type(3) {
+            -webkit-transition-delay: .7s;
+                    transition-delay: .7s;
+}
+
+.container img:nth-of-type(4) {
+            -webkit-transition-delay: .4s;
+                    transition-delay: .4s;
+}
+.btn_wrap:hover .btn-descriptor {
+    -webkit-transition-delay: .25s;
+            transition-delay: .25s;
+    -webkit-transform: translateX(-280px);
+            transform: translateX(-280px)
+}
+.btn_wrap:hover .social-media{
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+}
+/*end button share
+start footer*/
+
+
+footer{
+  position: relative;
+  z-index: 5;
+  bottom: 0;
+  max-width: 1250px;
+  margin: auto;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  gap: 1rem;
+  display: grid;
+}
+.footer-card{
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+}
+#large{
+    margin: auto;
+    height: 100px;
+    width: 350px;
+    grid-column: 1 / 4;
+}
+#nothing{
+    margin: auto;
+    height: 100px;
+    width: 350px;
+    grid-column: 4 / 7;
+}
+
+.footer-descriptor{
+  font-size: 15px;
+  color: #c2c2c2;
+  margin: auto;
+  letter-spacing: 2px;
+  line-height: 100px;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+
+}
+.footer-descriptor:hover{
+  font-weight: bold;
+  background-color: rgb(6, 34, 56);
+}
+/*end footer
+start screens*/
+.medium-label{
+  margin: 20px auto;
+  max-width: 1250px;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 1rem;
+  display: grid;
+}
+  .bold-label{
+    font-family: 'Encode Sans Condensed', sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+  }
+  .regular-label{
+      font-family: 'Encode Sans Condensed', sans-serif;
+      font-size: 50px;
+  }
+  #blue-label{
+    color: rgb(30,28,50);
+  }
+  #white-label{
+    margin: 100px auto 20px auto;
+    color: #dedede;
+    text-shadow: 1px 1px 0px rgba(0,0,0,0.51);
+  }
+  .right-label{
+  }
+  .left-button{
+    text-align: right;
+    margin: auto 0;
+  }
+  #left-button{
+    display: none;
+  }
+  a{
+    text-decoration: none;
+  }
+  .blue-more{
+    background-color: rgb(30,28,50);
+    padding: 10px 20px;
+    color:  #dedede;
+    -webkit-box-shadow: 0px 18px 57px -11px rgba(0,0,0,0.81);
+    -moz-box-shadow: 0px 18px 57px -11px rgba(0,0,0,0.81);
+    box-shadow: 0px 18px 57px -11px rgba(0,0,0,0.81);
+    border-radius: 10px;
+  }
+  .white-more{
+    color: rgb(30,28,50);
+    padding: 10px 20px;
+    background-color:  #dedede;
+    -webkit-box-shadow: 0px 18px 57px -11px rgba(0,0,0,0.81);
+    -moz-box-shadow: 0px 18px 57px -11px rgba(0,0,0,0.81);
+    box-shadow: 0px 18px 57px -11px rgba(0,0,0,0.81);
+    border-radius: 10px;
+    text-shadow: none;
+  }
+  .left-button span{
+    margin-right: 20px;
+  }
 /*
-screen sizes
+end of sections
+Start screen sizes
 @media only screen and (max-width: 1024px) {
   .nav-links{
     display: flex;
@@ -312,33 +765,74 @@ screen sizes
   .left-section{
     margin-top: 25vh;
     position: relative;
-    z-index: 5;
-    overflow-y: visible;
   }
   .smallText{
     padding: 0 2vh;
   }
+
+  /*End of second-section
+  start of third-section
+  */
+  #blue-label, #white-label, .top-news, .new-stories, .share, footer{
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+  .top-news, .new-stories{
+    display: block;
+  }
+  .big-card{
+    width: 700px;
+    height: 363.125px;
+  }
+  .small-card{
+    margin-top: 100px;
+    max-width: none;
+    width: 700px;
+    height: 363.125px;
+  }
+  .medium-title, .small-title{
+    margin: 300px 20px 0 20px;
+    font-size: 35px;
+  }
+
+  .tiny-card{
+    max-width: none;
+    margin: 50px auto;
+    width: 700px;
+    height: 184.211px;
+  }
+  footer{
+    display: block;
+    text-align: center;
+  }
+  .footer-card{
+    margin: auto;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+  }
+  .left-button{
+    display: none;
+  }
+  #left-button{
+    margin-top: 40px;
+    display: block;
+  }
+  #white-label, #blue-label{
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    max-width: 600px;
+  }
+}
+/*End of 1024*/
+
+@media only screen and (max-width: 1392px) {
+#blue-label, #white-label, .top-news, .new-stories, .share, footer{
+    max-width: 820px;
+}
+.share-btn{
+  grid-column: 1 / 3;
+}
+#nothing, .center-nothing{
+  display: none;
 }
 
-.nav-active{
-  transform: translateX(0%);
-}
-@keyframes navLinkFade {
-  from{
-    opacity: 0;
-    transform: translate(50px);
-  }
-  to{
-    opacity: 1;
-    transform: translate(0px);
-  }
-}
-.toggle .line1{
-  transform: rotate(-45deg) translate(-10px,8px);
-}
-.toggle .line2{
-  opacity: 0;
-}
-.toggle .line3{
-  transform: rotate(45deg) translate(-10px,-8px);
 }
