--- a/css/youth.css
+++ b/css/youth.css
@@ -10,7 +10,7 @@ body{
 /*The nav
 }*/nav{
     position: absolute;
-    z-index: 5;
+    z-index: 6;
     width: 100%;
     display: flex;
     align-items: center;
@@ -46,7 +46,7 @@ body{
     -webkit-box-shadow: 0px 18px 57px -11px rgba(0,0,0,0.81);
     -moz-box-shadow: 0px 18px 57px -11px rgba(0,0,0,0.81);
     box-shadow: 0px 18px 57px -11px rgba(0,0,0,0.81);
-    background: rgba(14,44,68, 0.6);
+    background: rgba(14,44,68, 0.9);
     transition: width 2s;
 
     /*clicking the burger btn*/
@@ -106,6 +106,7 @@ body{
     border-radius: 50%;
     height: 80px;
     text-align: center;
+    cursor: pointer;
   }
   #burger div{
     width: 80%;
@@ -167,7 +168,6 @@ body{
 
 Start of first section*/
 .first-section {
-  background: #ff3c00;
   color: #FFF;
   text-align: center;
   height: 800px;
@@ -221,7 +221,7 @@ Start of first section*/
 .btnGo{
   text-align: center;
   position: absolute;
-  z-index: 10;
+  z-index: 4;
   left: 50%;
   margin-left: -75px;
   top: 60%;
@@ -786,6 +786,65 @@ start screens*/
   .left-button span{
     margin-right: 20px;
   }
+
+  /*End of Home page
+  start stories*/
+
+  /*End of stories page
+  start article*/
+
+       .aboutComment{
+         padding-top: 10px;
+         display: flex;
+         color: gray;
+       }
+       .aboutComment span:last-child{
+         margin-left: 20px;
+       }
+       .commentDetails{
+           width: 80%;
+         margin-top: 20px;
+       }
+       .comment{
+         background: #f7cd86;
+         padding: 10px;
+       }
+       #comments{
+         padding: 20px;
+       }
+       #comments > span{
+         font-size: 20px;
+         font-weight: bold;
+         color: gray;
+       }
+
+       .commentArea{
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         border-bottom: 2px solid gray;
+         background: white;
+
+       }
+       .commentArea textarea{
+         font-size: 20px;
+         padding: 5px;
+         width: 80%;
+         border: 0;
+       }
+
+       .commentArea button{
+         background: gray;
+         font-size: 20px;
+         padding: 5px;
+         width: 20%;
+         background: 0;
+         border: 0;
+         cursor: pointer;
+         color: #f09307;
+         background: 0;
+         font-weight: bold;
+       }
 /*
 end of sections
 Start screen sizes
