--- a/css/youth.css
+++ b/css/youth.css
@@ -789,6 +789,64 @@ start screens*/
 
   /*End of Home page
   start stories*/
+  .one{
+    color: #FFF;
+  text-align: center;
+  height: 600px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  background-image: url('img/urban.jpg');
+  background-size: cover;
+  position: relative;
+  }
+  .one img{
+    position: absolute;
+    top: 250px;
+    left: 0;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+  }
+  .stories-welcome{
+    width: 100%;
+    padding: 200px 30px;
+    height: 100%;
+    text-align: center;
+    position: relative;
+  }
+  .left-button-stories{
+    text-align: right;
+    margin: auto 0;
+  }
+  .topNew{
+    display: inline-block;
+    border: 1px solid rgb(30,28,50);
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  .topNew span{
+    display: inline-block;
+    width 50%;
+    padding: 10px 20px;
+  }
+  /*
+  if new is chosen
+  */
+  #orderBynew{
+    background-color: rgb(30,28,50);
+    color: #dedede;
+  }
+  #orderBytop{
+    color: #dedede;
+  }
+  .footer{
+    background-image: url('img/footer_wave.svg');
+    background-size: cover;
+  }
+  .two{
+    text-align: center;
+  }
 
   /*End of stories page
   start article*/
