--- a/css/youth.css
+++ b/css/youth.css
@@ -971,6 +971,172 @@ start screens*/
          background: 0;
          font-weight: bold;
        }
+       /*End of article page
+       start about*/
+       .article-section1{
+  color: #FFF;
+text-align: center;
+height: 600px;
+width: 100%;
+overflow: hidden;
+position: relative;
+background-image: url('img/rasta.jpg');
+background-size: cover;
+position: relative;
+}
+.welcome-about{
+  position: absolute;
+  z-index: 2;
+  height: 600px;
+  width: 100%;
+  top: 0;
+}
+.about-welcome{
+  width: 100%;
+  padding: 150px 20%;
+  height: 100%;
+  text-align: center;
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+}
+.about-welcome span:nth-child(1){
+  font-size: 100px;
+}
+.background-words{
+  position: absolute;
+  background: black;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+}
+.background-words span:nth-child(1){
+  font-size: 100px;
+  font-weight: bold;
+  grid-row: span 1 / 3;
+  opacity: 0.1;
+}
+.background-words span:nth-child(2){
+  font-size: 50px;
+  font-weight: bold;
+  opacity: 0.3;
+}
+.background-words span:nth-child(3){
+  font-size: 50px;
+  font-weight: bold;
+  opacity: 0.2;
+}
+.background-words span:nth-child(4){
+  font-size: 200px;
+  font-weight: bold;
+  opacity: 0.25;
+  grid-row: span 5 / 7;
+  line-height: 120px;
+}
+/*Zim*/
+.background-words span:nth-child(5){
+  font-size: 70px;
+  font-weight: bold;
+  opacity: 0.15;
+}.background-words span:nth-child(6){
+  font-size: 50px;
+  font-weight: bold;
+  opacity: 0.2;
+}.background-words span:nth-child(7){
+  font-size: 120px;
+  font-weight: bold;
+  opacity: 0.08;
+}.background-words span:nth-child(8){
+  font-size: 80px;
+  font-weight: bold;
+  opacity: 0.2;
+  grid-row: span 3 / 4;
+}.background-words span:nth-child(9){
+  font-size: 150px;
+  font-weight: bold;
+  opacity: 0.2;
+}.background-words span:nth-child(10){
+  font-size: 60px;
+  font-weight: bold;
+  opacity: 0.27;
+  grid-row: span 7 / 8;
+}.background-words span:nth-child(11){
+  font-size: 50px;
+  font-weight: bold;
+  opacity: 0.2;
+}.background-words span:nth-child(12){
+  font-size: 250px;
+  font-weight: bold;
+  opacity: 0.1;
+  grid-row: span 1 / 3;
+}
+.about-article{
+  padding:5% 25%;
+}
+.simple-topic{
+  padding:5% 25% 1%;
+}
+.about-article p{
+  font-size: 20px;
+  text-align: justify;
+  justify-content: center;
+  line-height: 25px;
+}
+.team, .partners, .contact{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 1rem;
+  padding:1% 25%;
+  text-align: center;
+}
+.member{
+  min-height: 300px;
+  border-radius: 10px;
+  transition: box-shadow 0.2s ease,
+                transform 0.2s ease,
+                z-index 0s 0s ease;
+}
+.member:hover{
+  -webkit-box-shadow: 10px 15px 43px 5px rgba(0,0,0,0.3);
+-moz-box-shadow: 10px 15px 43px 5px rgba(0,0,0,0.3);
+box-shadow: 10px 15px 43px 5px rgba(0,0,0,0.3);
+
+}
+.member-img{
+  padding: 10%;
+  width: 70%;
+  border-radius: 50%;
+}
+.name{
+  font-weight: bold;
+  font-size: 20px;
+}
+.description span{
+  color: rgb(54, 67, 79);
+}
+.partners span{
+  color: rgb(116, 116, 116);
+  font-size: 50px;
+  font-weight: bold;
+}
+.partners img{
+  margin: 10%;
+  width: 80%;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.partners img:nth-child(3){
+  width: 35%;
+}
+.contact{
+  margin-top: 10%;
+}
+.call span:nth-child(1), .address span:nth-child(1), .email span:nth-child(1){
+  font-weight: bold;
+  font-size: 20px;
+}
 /*
 end of sections
 Start screen sizes
