--- a/css/youth.css
+++ b/css/youth.css
@@ -1374,6 +1374,117 @@ box-shadow: -1px 17px 58px -15px rgba(0,0,0,0.3);
     font-size: 20px;
     padding:0 0 10px 0;
   }
+  /*end of profile page
+  start shop page*/
+
+  .welcome-shop{
+    position: absolute;
+    z-index: 2;
+    height: 600px;
+    width: 100%;
+    top: 0;
+  }
+  .shop-welcome{
+    width: 100%;
+    padding: 350px 5%;
+    height: 100%;
+    text-align: center;
+    position: relative;
+    background: rgba(0, 0, 0, 0.4);
+  }
+  .shop-welcome span:nth-child(1){
+    font-size: 50px;
+    font-weight: bold;
+  }
+  .shop-items{
+    padding: 1% 15%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 1rem;
+  }
+  .shop-buttons{
+    opacity: 0;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 15%;
+    background: rgba(6, 138, 167, 0.9);
+    border-radius: 10px;
+    -webkit-box-shadow: -1px 17px 58px -15px rgba(6,137,167,1);
+    -moz-box-shadow: -1px 17px 58px -15px rgba(6,137,167,1);
+    box-shadow: -1px 17px 58px -15px rgba(6,137,167,1);
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+    gap: 1rem;
+    grid-auto-rows: 50px;
+  }
+  .shop-buttons:hover{
+    transition: all .8s ease;
+    opacity: 1;
+  }
+  .shop-product:hover .product-details span{
+    color: white;
+  }
+  .round-button{
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.1);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    -webkit-box-shadow: -1px 7px 42px -1px rgba(0,0,0,0.78);
+    -moz-box-shadow: -1px 7px 42px -1px rgba(0,0,0,0.78);
+    box-shadow: -1px 7px 42px -1px rgba(0,0,0,0.78);
+  }
+  .round-button img{
+    padding: 15%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    height: 90%;
+  }
+  .buy-button{
+    padding: 15%;
+    width: 100px;
+    text-align: center;
+    background: white;
+    border-radius:30px;
+    -webkit-box-shadow: -1px 7px 42px -1px rgba(0,0,0,0.78);
+    -moz-box-shadow: -1px 7px 42px -1px rgba(0,0,0,0.78);
+    box-shadow: -1px 7px 42px -1px rgba(0,0,0,0.78);
+    cursor: pointer;
+  }
+  .buy-button span{
+    display: inline-block;
+    position: relative;
+  }
+  .shop-product{
+    position: relative;
+    padding: 15%;
+  }
+  .product-image{
+    width: 100%;
+    height: 180px;
+    overflow: hidden;
+  }
+  .product-image img{
+    height: 100%;
+  }
+  .product-details{
+    margin-top: 50px;
+    position: relative;
+    z-index: 2;
+  }
+  .product-details span:nth-child(1){
+    font-size: 20px;
+    font-weight: bold;
+  }.product-details span:nth-child(3){
+    font-size: 15px;
+    color: rgb(0, 139, 170);
+  }
 /*
 end of sections
 Start screen sizes
